<resources>
    <string name="app_name">AdoptMyPet</string>
    <string name="google_login">Continue with Google</string>
    <string name="facebook_login">Continue with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="create_account">Create a new account</string>
    <string name="separator">|</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="welcome">Bine ai venit %1$s!</string>
    <string name="thank_you">Multumim ca ati ales sa folositi aplicatia noastra. Pentru a incepe cautarile animalutului perfect pentru tine sau pentru a gasi un stapan responsabil pentru animalutul tau va trebui sa raspunzi la cateva intrebari.</string>
    <string name="adopting">Vreau sa adopt</string>
    <string name="adopter">Vreau sa dau spre adoptie</string>
    <string name="question_ex">Do you have any disabilities or functional limitations?</string>
    <string name="description_ex">There are people with certain needs who love to have a protective soul by their side. Fortunately, there are animals that have so far been trained to accompany these people</string>
    <string name="answer_1">I have locomotor disabilities</string>
    <string name="answer_2">I have sight limitations</string>
    <string name="answer_3">I have other disabilities</string>
    <string name="answer_4">I don’t have any disabilities</string>
    <string name="page_number_ex">%1$d/%2$d</string>
    <string name="error_on_login">Parola sau username incorect.</string>
    <string name="password_mismatch">Nu ati introdus aceiasi parola!</string>
    <string name="register_error">Contul deja exista sau ati introdus date invalide.</string>
    <string name="incorrect_data">Datele introduse nu sunt valide.</string>
    <string name="adopting_description">Caut un animalut potrivit pentru mine si nevoile mele</string>
    <string name="adopter_description">Caut stapan responsabil si iubitor pentru animalutul meu</string>
    <string name="number_of_founds_sample">S-au gasit x rezultate</string>
    <string name="petName">Numele animalutului</string>
    <string name="petSex">Sexul animalutului</string>
    <string name="shortDescription">Scurta descriere</string>
    <string name="petStory">Povestea animalutului</string>
    <string name="addPet">Adauga</string>
    <string name="choose_photo_sample">Adauga poze cu animalutul tau</string>
    <string name="refresh">Refresh</string>
    <string name="read_more">Citeste mai mult</string>
    <string name="adopt_now">Adopta acum</string>
    <string name="name_animal_item">Nume:</string>
    <string name="color_animal_item">Culoare:</string>
    <string name="age_animal_item">Varsta:</string>
    <string name="unknown">unknown</string>
    <string name="about_me">Despre mine</string>
    <string name="color">Culoare</string>
    <string name="age">Varsta</string>
    <string name="personality">Scurta descriere</string>
    <string name="myStory">Povestea mea</string>
    <string name="cancel">Cancel</string>
    <string name="candidates">Vezi aplicanti</string>
    <string name="erase">Sterge</string>
    <string name="fullName">Nume complet</string>
    <string name="phoneNo">Numarul de telefon</string>
    <string name="questionnaireAnswers">Raspunsurile la intrebari</string>
    <string name="congrats">Felicitari!</string>
    <string name="congratsMore">Iti tinem pumnii sa fii noul parinte al animalutului dorit. \n
        Acum ramane sa astepti telefonul stapanului in cazul in care considera ca cea mai potrivita casa pentru micut este chiar a ta.</string>
    <string name="youSure">Esti sigur ca vrei sa stergi?</string>
    <string name="youSureMore">Daca nu ai reusit sa gasesti stapan pentru animalul tau si ti-ai pierdut speranta incearca sa ne mai oferi o sansa. Poate chiar maine va aparea persoana potrivita.</string>
    <string name="my_pets">My pets</string>
    <string name="home">Home</string>
    <string name="nici_un_rezultat_gasit">Ne pare rau, nu s-a gasit nici un rezultat gasit</string>
    <string name="ne_pare_rau_am_intampinat_o_problema">Ne pare rau, am intampinat o problema.</string>
    <string-array name="sex_array">
        <item>Feminin</item>
        <item>Masculin</item>
        <item>Nestiut</item>
    </string-array>
</resources>
