<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".presentation.WelcomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/home_menu"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/thank_you"
            style="@style/sample_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you" />

        <Button
            android:id="@+id/adopting"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/empty_button_rounded"
            android:onClick="onAdoptingSubmit"
            android:text="@string/adopting"
            android:textSize="20sp" />

        <TextView
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adopting_description" />

        <Button
            android:id="@+id/adopter"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/empty_button_rounded"
            android:onClick="onAdopterSubmit"
            android:text="@string/adopter"
            android:textSize="20sp" />

        <TextView
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adopter_description" />
    </LinearLayout>

</LinearLayout>