<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.PetDescriptionActivity">

            <ImageView
                android:id="@+id/addPhotos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toTopOf="@+id/petInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="choosePhoto"/>

            <TextView
                android:id="@+id/sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/choose_photo"
                android:text="@string/choose_photo_sample"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/petInput"/>

            <LinearLayout
                android:id="@+id/petInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPhotos">

                <EditText
                    android:id="@+id/petName"
                    style="@style/loginInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/empty_button_rounded"
                    android:hint="@string/petName"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/petSex"
                    style="@style/loginInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/empty_button_rounded"
                    android:hint="@string/petSex"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/petDescription"
                    style="@style/loginInput"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/empty_button_rounded"
                    android:hint="@string/shortDescription"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/petStory"
                    style="@style/loginInput"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/empty_button_rounded"
                    android:hint="@string/petStory"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

                <Button
                    style="@style/loginButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button_rounded"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/addPet"
                    android:textColor="@color/deepBlue"
                    android:textSize="24dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>