<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pet"
            type="com.example.adoptmypet.models.Pet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.PetDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".presentation.PetDescriptionActivity">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toTopOf="@+id/buttons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@id/photo"
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:onClick="onCancelClicked"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/adopt_now"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:onClick="onAdoptClicked"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/petAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttons">

                    <TextView
                        android:id="@+id/aboutMe"
                        style="@style/pet_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me" />

                    <TextView
                        android:id="@+id/color"
                        style="@style/pet_details_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color"  />

                    <TextView
                        android:id="@+id/color_value"
                        style="@style/pet_details_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/color"
                        android:text="@{pet.color}"/>

                    <TextView
                        android:id="@+id/age"
                        style="@style/pet_details_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/ageValue"
                        style="@style/pet_details_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/age"
                        android:text="@{pet.age}"/>

                    <TextView
                        android:id="@+id/myPersonality"
                        style="@style/pet_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personality" />

                    <TextView
                        android:id="@+id/personalityValue"
                        style="@style/pet_details_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/personality"
                        android:text="@{pet.description}"/>

                    <TextView
                        android:id="@+id/myStory"
                        style="@style/pet_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myStory" />

                    <TextView
                        android:id="@+id/storyValue"
                        style="@style/pet_details_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/myStory"
                        android:text="@{pet.story}"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>